# rslint

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  bench.sh  book.toml  ci.sh  cli.yml  ddlog_profile.txt  foo.js  graph.html  null  package.json  postinstall.js  rslintrc.toml  some.js
.cargo/: config  config.toml
crates/rslint_cli/: CHANGELOG.md  Cargo.toml
crates/rslint_cli/src/: cli.rs  config.rs  files.rs  flame.rs  infer.rs  lib.rs  macros.rs  main.rs  panic_hook.rs  watch.rs
crates/rslint_config/: Cargo.toml
crates/rslint_config/src/: de.rs  lib.rs
crates/rslint_core/: CHANGELOG.md  Cargo.toml
crates/rslint_core/benches/: bench.rs
crates/rslint_core/src/: diagnostic.rs  file.rs  incremental.rs  lib.rs  rule.rs  rule_prelude.rs  store.rs  testing.rs  util.rs
crates/rslint_core/src/autofix/: apply.rs  mod.rs
crates/rslint_core/src/directives/: commands.rs  lexer.rs  mod.rs  parser.rs
crates/rslint_core/src/groups/: mod.rs
crates/rslint_core/src/util/: const_exprs.rs  mod.rs  regex.rs  style.rs
crates/rslint_errors/: CHANGELOG.md  Cargo.toml  some.js
crates/rslint_errors/src/: diagnostic.rs  emit.rs  file.rs  formatters.rs  lib.rs  lsp.rs  main.rs  suggestion.rs
crates/rslint_errors/src/annotate_snippets/: mod.rs  snippet.rs
crates/rslint_errors/src/codespan/: diagnostic.rs
crates/rslint_lexer/: CHANGELOG.md  Cargo.toml
crates/rslint_lexer/benches/: bench.rs
crates/rslint_lexer/src/: highlight.rs  labels.rs  lib.rs  state.rs  tests.rs  token.rs
crates/rslint_lsp/: Cargo.toml
crates/rslint_lsp/src/: lib.rs  util.rs
crates/rslint_lsp/src/core/: document.rs  error.rs  language.rs  session.rs
crates/rslint_lsp/src/lsp/: api.rs  mod.rs  server.rs
crates/rslint_lsp/src/provider/: actions.rs  completion.rs  diagnostics.rs  hover.rs  mod.rs  toml_completion.rs
crates/rslint_lsp/src/service/: mod.rs  synchronizer.rs
crates/rslint_parser/: CHANGELOG.MD  CHANGELOG.md  Cargo.toml
crates/rslint_parser/benches/: bench.rs  parser.rs
crates/rslint_parser/benches/files/: es2021.js
crates/rslint_parser/src/: ast.rs  diagnostics.rs  event.rs  incremental.rs  lib.rs  lossless_tree_sink.rs  lossy_tree_sink.rs  numbers.rs  parse.rs  parser.rs  state.rs  syntax_node.rs  tests.rs  token_set.rs  token_source.rs  util.rs
crates/rslint_parser/src/ast/: expr_ext.rs  generated.rs  stmt_ext.rs  ts_ext.rs
crates/rslint_parser/src/syntax/: decl.rs  expr.rs  pat.rs  program.rs  stmt.rs  typescript.rs  util.rs
crates/rslint_regex/: Cargo.toml  README.md
crates/rslint_regex/benches/: bench.rs
crates/rslint_regex/src/: error.rs  ir.rs  lib.rs  parser.rs  tests.rs  unicode.rs  utf8.rs
crates/rslint_regex/src/ast/: mod.rs  parse.rs  print.rs  tests.rs  visitor.rs
crates/rslint_regex/src/unicode_tables/: age.rs  general_category.rs  mod.rs  property_bool.rs  property_names.rs  property_values.rs  script.rs  script_extension.rs  sentence_break.rs  word_break.rs
crates/rslint_rowan/: Cargo.toml
crates/rslint_rowan/src/: api.rs  arc.rs  cursor.rs  green.rs  lib.rs  newtype.rs  serde_impls.rs  syntax_text.rs  utility_types.rs
crates/rslint_rowan/src/green/: builder.rs  element.rs  node.rs  token.rs
crates/rslint_scope/: Cargo.toml  ddlog.sh  test.js
crates/rslint_scope/benches/: ddlog_benches.rs  graphs.py
crates/rslint_scope/ddlog/: ast.dl  ast.rs  ast.toml  config.dl  config.rs  config.toml  inputs.dl  is_exported.dl  name_in_scope.dl  name_in_scope.rs  name_in_scope.toml  rslint_scoping.dl  rslint_scoping.rs  rslint_scoping.toml  scopes.dl  tdz.dl  utils.dl  utils.rs  utils.toml  var_decls.dl  variable_decl.dl
crates/rslint_scope/output.log/: no_unused_labels  typeof_undef  use_before_def
crates/rslint_scope/src/: analyzer.rs  datalog.rs  globals.rs  ir.rs  lib.rs  util.rs
crates/rslint_syntax/: Cargo.toml
crates/rslint_syntax/src/: generated.rs  lib.rs
rslint/: Cargo.toml  cli.yml
rslint/benches/: lexer.rs
rslint/src/: diagnostic.rs  lib.rs  main.rs  runner.rs  tablegen.rs  test_util.rs  util.rs  visit.rs
rslint/src/cache/: mod.rs
rslint/src/formatters/: codespan.rs  compact.rs  mod.rs
rslint/src/linter/: file_walker.rs  mod.rs
rslint/src/rules/: context.rs  mod.rs  store.rs
rslint_cli/: CHANGELOG.md  Cargo.toml
rslint_cli/src/: cli.rs  config.rs  files.rs  lib.rs  main.rs  panic_hook.rs  watch.rs
rslint_core/: CHANGELOG.md  Cargo.toml
rslint_core/src/: diagnostic.rs  directives.rs  incremental.rs  lib.rs  rule.rs  rule_prelude.rs  store.rs  testing.rs  util.rs
rslint_core/src/directives/: mod.rs  parser.rs
rslint_core/src/groups/: mod.rs
rslint_lexer/: CHANGELOG.md  Cargo.toml
rslint_lexer/src/: highlight.rs  labels.rs  lib.rs  state.rs  tests.rs  token.rs
rslint_parse/: Cargo.toml
rslint_parse/benches/: lexer.rs  serialization.rs
rslint_parse/docs/: info.md
rslint_parse/docs/error_recovery/: expressions.md
rslint_parse/src/: lib.rs  unicode.rs
rslint_parse/src/diagnostic/: mod.rs
rslint_parse/src/lexer/: numbers.rs
rslint_parse/src/macros/: mod.rs
rslint_parse/src/parser/: error.rs  util.rs
rslint_parse/src/util/: mod.rs
rslint_parser/: CHANGELOG.MD  Cargo.toml
rslint_parser/src/: ast.rs  diagnostics.rs  event.rs  incremental.rs  lib.rs  lossless_tree_sink.rs  lossy_tree_sink.rs  numbers.rs  parse.rs  parser.rs  state.rs  syntax.rs  syntax_kind.rs  syntax_node.rs  tests.rs  token_set.rs  token_source.rs  util.rs
rslint_parser/src/ast/: expr_ext.rs  stmt_ext.rs
rslint_parser/src/syntax/: decl.rs  expr.rs  pat.rs  program.rs  stmt.rs  util.rs
rslint_parser/src/syntax_kind/: generated.rs
rslint_syntax/: Cargo.toml
rslint_syntax/src/: ast.rs  generated.rs  lib.rs  syntax_kind.rs  syntax_node.rs  token_source.rs  tree_sink.rs
rslint_syntax/src/ast/: expr_ext.rs  stmt_ext.rs
rslint_syntax/src/syntax_kind/: generated.rs
xtask/: Cargo.toml
xtask/src/: ast.rs  codegen.rs  datalog.rs  glue.rs  lib.rs  main.rs
xtask/src/codegen/: parser_tests.rs  syntax.rs
xtask/src/coverage/: files.rs  mod.rs  tablegen.rs
xtask/src/docgen/: extract.rs  mod.rs
(+544 files in other folders)
