[workspace]
members = [
  "crates/*",
  "xtask",
]
default-members = ["crates/rslint_cli"]

[profile]
release = { lto = "thin", codegen-units = 1 }
bench = { lto = "thin", codegen-units = 1 }

[profile.dev]
# Disabling debug info speeds up builds a lot, and we do not really
# rely on debug info for debugging
debug = 0
