[package]
name = "rslint"
version = "0.1.0"
authors = ["RDambrosio016 <cavalier.archer@gmail.com>"]
edition = "2018"

[dependencies]
rslint-parse = { path = "../rslint-parse", version = "0.1" }
once_cell = "1.3.1"
unicode-xid = "0.2.0"
codespan-reporting = "0.9.2"
clap = {version = "2", features = ["yaml"]}
glob = "0.3.0"
ansi_term = "0.12"
log = "0.4.8"
env_logger = "0.7.1"
walkdir = "2.3.1"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false