[package]
name = "rslint"
version = "0.1.0"
authors = ["RDambrosio016 <cavalier.archer@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
rslint_parse = { path = "../rslint_parse", version = "0.1" }
once_cell = "1.3.1"
codespan-reporting = { version = "0.9.5", features = ["serialization"] }
clap = {version = "2", features = ["yaml"]}
glob = "0.3.0"
log = "0.4.8"
env_logger = "0.7.1"
walkdir = "2.3.1"
rayon = "1.3.0"
swc_ecma_visit_macros = "0.4.0"
paste = "0.1.18"
termcolor = "1.1.0"
serde_derive = "1.0.114"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"