[package]
name = "rslint_cli"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
edition = "2018"

[dependencies]
rslint_core = { path = "../rslint_core", version = "0.1.0" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan.git", features = ["serialization"] }
walkdir = "2.3.1"
glob = "0.3.0"
structopt = "0.3.17"
rslint_lexer = { path = "../rslint_lexer", version = "0.1.0", features = ["highlight"] }
ureq = "1.4.0"
regex = "1.3.9"
rayon = "1.4.0"
hashbrown = { version = "0.9.0", features = ["rayon"] }
serde = "1.0.115"
toml = "0.5.6"
heck = "0.3.1"
notify = "4.0.15"
colored = "2.0.0"
