[package]
name = "rslint_core"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
edition = "2018"

[dependencies]
rslint_parser = { path = "../rslint_parser", version = "0.1.0" }
rslint_lexer = { path = "../rslint_lexer", version = "0.1.0" }
codespan-reporting = { git = "https://github.com/brendanzab/codespan.git", features = ["serialization"] }
serde = { version = "1.0.115", features = ["derive"] }
typetag = "0.1.5"
rayon = "1.4.0"
dyn-clone = "1.0.2"
text-diff = "0.4.0"
