[package]
name = "rslint_core"
version = "0.1.1"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
edition = "2018"
description = "The core linter housing all of the rules for the rslint project"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[dependencies]
rslint_parser = { path = "../rslint_parser", version = "0.1.0" }
rslint_lexer = { path = "../rslint_lexer", version = "0.1.0" }
codespan-reporting = { version = "0.9.5", features = ["serialization"] }
serde = { version = "1.0.115", features = ["derive"] }
typetag = "0.1.5"
rayon = "1.4.0"
dyn-clone = "1.0.2"
text-diff = "0.4.0"
