[package]
edition = "2018"
name = "rslint_lexer"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
license = "MIT"

[dependencies]
codespan-reporting = "0.9.5"
rslint_parser = { version = "0.1.0", path = "../rslint_parser" }
unicode-xid = "0.2.1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
