[package]
edition = "2018"
name = "rslint_lexer"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
license = "MIT"

[dependencies]
codespan-reporting = { git = "https://github.com/brendanzab/codespan.git" }
rslint_syntax = { version = "0.1.0", path = "../rslint_syntax" }
unicode-xid = "0.2.1"
atty = { version = "0.2.14", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
highlight = ["atty", "ansi_term"]

[package.metadata.docs.rs]
features = ["highlight"]
