[package]
name = "rslint_parse"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
once_cell = "1.3.1"
codespan-reporting = "0.9.5"
log = "0.4.8"
rayon = "1.3.0"
ansi_term = "0.12"
fnv = "1"
slab = "0.4.2"
snmalloc-rs = "0.2.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "parser"
harness = false
