[package]
edition = "2018"
name = "rslint_parser"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
license = "MIT"

[dependencies]
codespan-reporting = "0.9.5"
rslint_syntax = { path = "../rslint_syntax", version = "0.1" }
rslint_lexer = { path = "../rslint_lexer", version = "0.1", features = ["highlight"] }
rowan = { git = "https://github.com/RDambrosio016/rowan" }
num-bigint = "0.3.0"
lexical = { version = "5.2.0", features = ["radix"] }

[dev-dependencies]
criterion = "0.3"
walkdir = "2.3.1"
rayon = "1"
expect-test = "1.0"

[[bench]]
name = "parser"
harness = false

