[package]
edition = "2018"
name = "rslint_syntax"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
license = "MIT"

[dependencies]
rowan = "0.10.0"
codespan-reporting = "0.9.5"
rslint_lexer = { path = "../rslint_lexer", version = "0.1" }
rslint_parser = { path = "../rslint_parser", version = "0.1" }
