[package]
edition = "2018"
name = "xtask"
version = "0.1.0"
authors = ["RDambrosio016 <rdambrosio016@gmail.com>"]
license = "MIT"

[dependencies]
quote = "1.0.2"
proc-macro2 = { version = "1.0.19", features = ["span-locations"] }
anyhow = "1.0.26"
pico-args = "0.3.1"
syn = { version = "1.0.39", features = ["full", "parsing"] }
unindent = "0.1.6"
