[package]
edition = "2018"
name = "xtask"
version = "0.0.0"
authors = ["RSLint developers"]
license = "MIT"
publish = false

[dependencies]
quote = "1.0.2"
proc-macro2 = { version = "1.0.19", features = ["span-locations"] }
anyhow = "1.0.26"
pico-args = "0.3.1"
syn = { version = "1.0.39", features = ["full", "parsing"] }
unindent = "0.1.6"
convert_case = "0.4.0"
regex = "1.3.9"
serde =  { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
once_cell = "1.4.1"
rslint_parser = { path = "../crates/rslint_parser", version = "0.2" }
ascii_table = "3.0.1"
colored = "2.0.0"
rayon = "1.5.0"
indicatif = { version = "0.15.0", features = ["improved_unicode", "rayon"] }
walkdir = "2.3.1"
