[package]
name = "rslint_cli"
version = "0.2.1"
authors = ["RSLint developers"]
edition = "2018"
description = "CLI crate and glue for the rslint project"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[[bin]]
name = "rslint"
path = "src/main.rs"

[dependencies]
rslint_core = { path = "../rslint_core", version = "0.2.2" }

structopt = "0.3.20"
colored = "2.0.0"
regex = "1.4.2"
glob = "0.3.0"
smol = "1.2.4"
async-walkdir = "0.2.0"
