[package]
name = "rslint_cli"
version = "0.2.1"
authors = ["RSLint developers"]
edition = "2018"
description = "CLI crate and glue for the rslint project"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[[bin]]
name = "rslint"
path = "src/main.rs"

[dependencies]
rslint_core = { path = "../rslint_core", version = "0.2.0" }
rslint_config = { path = "../rslint_config", version = "0.1.0" }
rslint_errors = { path = "../rslint_errors", version = "0.1.0" }
rslint_parser = { path = "../rslint_parser", version = "0.2" }
rslint_scope = { path = "../rslint_scope" }
termcolor = "1.1.0"
walkdir = "2.3.1"
glob = "0.3.0"
structopt = "0.3.17"
rslint_lexer = { path = "../rslint_lexer", version = "0.1.0", features = ["highlight"] }
regex = "1.3.9"
rayon = "1.4.0"
num_cpus = "1.13.0"
hashbrown = { version = "0.9.0", features = ["rayon"] }
serde = "1.0.115"
toml = "0.5.6"
heck = "0.3.1"
notify = "4.0.15"
colored = "2.0.0"
tracing = { version = "0.1.22", features = ["attributes", "release_max_level_trace"] }
tracing-flame = "0.1.0"
inferno = "0.10.3"
superluminal-perf = "0.1.1"

[dependencies.tracing-subscriber]
version = "0.2.15"
default-features = false
features = ["fmt", "registry", "ansi", "env-filter"]
