[package]
name = "rslint_config"
version = "0.1.0"
authors = ["RSLint developers"]
edition = "2018"
description = "The rslint specific config format."
license = "MIT"
repository = "https://github.com/rslint/rslint"

[dependencies]
rslint_errors = { path = "../rslint_errors" }
rslint_core = { path = "../rslint_core" }
serde = "1.0.117"
toml = "0.5.7"
heck = "0.3.1"
regex = "1.4.1"
dirs-next = "2.0.0"
schemars = { version = "0.8.0", optional = true }
serde_json = "1.0.61"

[features]
schema = ["schemars", "rslint_core/schema"]
