[package]
name = "rslint_core"
version = "0.1.2"
authors = ["RSLint developers"]
edition = "2018"
description = "The core linter housing all of the rules for the rslint project"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[dependencies]
rslint_parser = { path = "../rslint_parser", version = "0.2.0" }
rslint_lexer = { path = "../rslint_lexer", version = "0.1.0" }
rslint_errors = { path = "../rslint_errors", version = "0.1.0" }
rslint_text_edit = { path = "../rslint_text_edit", version = "0.1.0" }
serde = { version = "1.0.115", features = ["derive"] }
typetag = "0.1.5"
rayon = "1.4.0"
dyn-clone = "1.0.2"
