[package]
name = "rslint_errors"
version = "0.1.0"
authors = ["RSLint developers"]
edition = "2018"

[dependencies]
rslint_rowan = { version = "0.10.0", optional = true }
unicode-width = "0.1.8"
yansi-term = "0.1.2"
serde = { version = "1.0.117", optional = true, features = ["derive"] }
lsp-types = { version = ">=0.79, <0.82", optional = true }
text-diff = "0.4.0"
rslint_text_edit = { version = "0.1", path = "../rslint_text_edit" }

[features]
rowan = ["rslint_rowan"]
lsp = ["lsp-types"]
