[package]
edition = "2018"
name = "rslint_lexer"
version = "0.1.3"
authors = ["RSLint developers"]
description = "An extremely fast ECMAScript lexer made for the rslint project"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[dependencies]
rslint_errors = { path = "../rslint_errors", version = "0.1.0" }
rslint_syntax = { version = "0.1.0", path = "../rslint_syntax" }
unicode-xid = "0.2.1"
atty = { version = "0.2.14", optional = true }
ansi_term = { version = "0.12.1", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
criterion = "0.3"

[[bench]]
name = "lexer"
path = "benches/bench.rs"
harness = false

[features]
highlight = ["atty", "ansi_term"]

[package.metadata.docs.rs]
features = ["highlight"]
