[package]
edition = "2018"
name = "rslint_lsp"
version = "0.0.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
description = "A language server implementation for rslint."
license = "MIT"
repository = "https://github.com/rslint/rslint"

[[bin]]
name = "rslint-lsp"
path = "src/bin/main.rs"
doc = false

[features]
default = ["threaded"]
corpus = []
threaded = ["tokio/rt-threaded"]

[build-dependencies]
anyhow = "1.0"

[dependencies]
anyhow = "1.0"
clap = "2.33"
dashmap = "3.7"
env_logger = "0.7"
futures = "0.3"
itertools = "0.9"
log = "0.4"
rslint_core = { path = "../rslint_core", version = "0.2" }
rslint_parser = { path = "../rslint_parser", version = "0.2" }
rslint_errors = { path = "../rslint_errors", version = "0.1", features = ["lsp"] }
rslint_config = { path = "../rslint_config", version = "0.1", features = ["schema"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["io-std", "macros"] }
tower-lsp = "=0.13.3"
serde = { version = "1.0.117", features = ["derive"] }
taplo = { version = "0.4", features = ["schema"] }
schemars = "0.8.0"
once_cell = "1.5.2"
