[package]
name = "rslint_regex"
version = "0.1.0"
authors = ["The Rust Project Developers", "RSLint developers", "deno_lint developers"]
license = "MIT"

[features]
default = ["unicode"]

unicode = [
  "unicode-age",
  "unicode-bool",
  "unicode-case",
  "unicode-gencat",
  "unicode-perl",
  "unicode-script",
  "unicode-segment",
]
unicode-age = []
unicode-bool = []
unicode-case = []
unicode-gencat = []
unicode-perl = []
unicode-script = []
unicode-segment = []
