[package]
name = "rslint_regex"
version = "0.1.0"
authors = ["RSLint developers"]
edition = "2018"
description = "RegEx parser for the ECMAScript definition"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[dependencies]
rslint_errors = { path = "../rslint_errors", version = "0.1.0" }
bitflags = "1.2.1"
