[package]
name = "rslint_rowan"
version = "0.10.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>", "RSLint developers"]
license = "MIT"
description = "A simple threadsafe fork of rowan for the rslint project"
edition = "2018"

[dependencies]
erasable = "1.2.1"
rustc-hash = "1.0.1"
serde = { version = "1.0.89", optional = true, default-features = false }
slice-dst = "1.4.1"
smol_str = "0.1.10"
text-size = "1.0.0"
servo_arc = "0.1.1"

[dev-dependencies]
m_lexer = "0.0.4"

[features]
serde1 = [ "serde", "text-size/serde" ]
