[package]
name = "rslint_scope"
version = "0.1.0"
authors = ["RSLint developers"]
edition = "2018"
description = "Scope analysis of JS programs"
license = "MIT"
repository = "https://github.com/rslint/rslint"

[features]
schema = ["schemars"]

[dependencies]
rslint_parser = { path = "../rslint_parser", version = "0.2.1" }
serde = { version = "1.0.115", features = ["derive"] }
typetag = "0.1.5"
dashmap = "3.11.10"
# Datalog types
types = { path = "./generated/types" }
# Datalog
differential_datalog = { path = "./generated/differential_datalog" }
schemars = { version = "0.8.0", optional = true }
static_assertions = "1.1.0"
tracing = { version = "0.1.22", features = ["release_max_level_trace"] }

# Generated datalog code
[dependencies.rslint_scoping]
path = "./generated"
default-features = false

[build-dependencies]
toml = "0.5.7"
anyhow = "1.0.35"
walkdir = "2.3.1"
cargo_toml = "0.8.1"

[dev-dependencies]
rayon = "1.5.0"

[dev-dependencies.tracing-subscriber]
version = "0.2.15"
default-features = false
features = ["fmt", "registry", "ansi", "env-filter"]
