[package]
edition = "2018"
name = "rslint_syntax"
version = "0.1.3"
authors = ["RSLint developers"]
description = "SyntaxKind and common rowan definitions for rslint_parser"
license = "MIT"
repository = "https://github.com/RDambrosio016/RSLint"

[dependencies]
rslint_rowan = { path = "../rslint_rowan", version = "0.10.0" }
